# cadvcs

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_cli_auth.py  test_infra.py  test_ui.py
.github/workflows/: ci.yml
cadvcs/: auth_store.py  bus.py  cache.py  cli.py  client.py  convert.py  db.py  identity.py  login.py  merge.py  remote.py  repo.py  semdiff.py  storage.py  visualdiff.py  worker.py
cadvcs/api/: auth.py  main.py  schemas.py  users.py
cadvcs/web/: index.html
deploy/k8s/: 00-namespace.yaml  01-config.yaml  02-secret.yaml  03-api.yaml  04-workers.yaml  05-ingress.yaml  README.md
docs/: GUIA-PASO-A-PASO.md  IMPROVEMENTS.md  README.md
docs/specs/: 01-storage.md  02-data-model.md  03-semantic-diff.md  04-merge.md  05-conflict-resolution.md  06-locking.md  07-blame.md  08-cli.md  09-rest-api.md  10-auth-oidc.md  11-entity-guids.md  12-async-indexing.md  13-presigned-urls.md  14-property-testing.md  15-web-ui.md  16-dwg-conversion.md  17-kafka-events.md  18-redis-cache.md  19-cloud-deployment.md
tests/: conftest.py  test_api.py  test_async.py  test_cli_auth.py  test_merge_properties.py  test_presigned.py  test_s3.py  test_script_suites.py
