[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cadvcs"
version = "0.3.0"
description = "Git-like version control for CAD files (DXF/DWG) with entity-level merge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Erodis Pérez Michel" }]
dependencies = ["ezdxf>=1.4"]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["fastapi>=0.110", "uvicorn>=0.29", "httpx"]

[project.scripts]
cadvcs = "cadvcs.cli:main"

[tool.setuptools.packages.find]
include = ["cadvcs*"]
